--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -22,15 +22,11 @@
 	<h2>Why you should try playing "Memory Card Game"?</h2>
 	<p>This game is a great activity for family gathering and for the friends gathering. You can play aslo use it to help your childern to learn more and discover more. </p>
 
-	<div id="game">
-      <img src="images/back.png" alt="Queen of Diamonds">
-      <img src="images/back.png" alt="Queen of Hearts">
-      <img src="images/back.png" alt="King of Diamonds">
-      <img src="images/back.png" alt="King of Hearts">
+	<div id="game-board" class="board clearfix"></div>
 
-    </div>
+<input type="reset" value="Reset" onClick="window.location.reload()">
+
     </main>
-
 	<footer class="clearfix"> <p class="copyright"> Copyright 2017 </p> <p class="message"> Created with &hearts; by <span class="name">GA</span> </p> </footer>
 
 <script src="js/main.js"></script>
